name:                http-print
version:             0.1.0.0
synopsis:            Simple server to print requests.
description:         A web server that prints to stdout.
homepage:            https://github.com/alvare/http-print#readme
license:             BSD3
license-file:        LICENSE
author:              Ezequiel Alvarez
maintainer:          welcometothechango@gmail.com
copyright:           2016 Ezequiel Alvarez
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable http-print
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , ansi-terminal
                     , case-insensitive
                     , bytestring
                     , http-types
                     , wai
                     , warp
